# pytopmod-core

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
scripts/: dcel_demo.py  dlfl_demo.py  dlfl_import_demo.py
src/pytopmod/core/: circular_list.py  corner.py  edge.py  face.py  geometry.py  half_edge.py  keystore.py  mesh.py  vertex.py
src/pytopmod/core/dcel/: mesh.py  obj_io.py  operators.py  primitives.py
src/pytopmod/core/dlfl/: mesh.py  obj_io.py  operators.py  primitives.py
src/pytopmod/core/dlfl/operations/: construction.py  subdivision.py
